--- a/webPackage/css/SASS/partials/_allMixins.sass
+++ b/webPackage/css/SASS/partials/_allMixins.sass
@@ -1,3 +1,4 @@
+// CLASSES
 // BACKGROUNDS
 //   gradientBg
 //   boxShadow
@@ -10,6 +11,13 @@
 //   toFontList
 // MEDIA QUERIES
 
+// ------------------------------------------------------------ CLASSES
+.fixedTop
+  position: fixed
+  z-index: 1000
+  top: 0
+.fullwidth
+  width: 100%
 
 // -------------------------------------------------------- BACKGROUNDS 
 // -------------------------------------------  gradientBg
