--- a/webPackage/css/SASS/colors/_colors-css.sass
+++ b/webPackage/css/SASS/colors/_colors-css.sass
@@ -1,6 +1,8 @@
 @import "colors-constants"
 @import "colors-defaultSettings"
 @import "colors-assignations"
+// testing color assignations
+@import "colors-assignations2"
 
 
 
