--- a/webPackage/css/SASS/settings/_settings.sass
+++ b/webPackage/css/SASS/settings/_settings.sass
@@ -54,6 +54,12 @@
 
   // ------------------------- OPTIONS
 
+  // ------------------- base_color_bg 
+  // true -> use base_color as main background color
+  // false -> calculate base_color middletone to use as main background color
+  
+  $base_color_bg: false
+
   // ----------------- lightBackground
   // true -> lighter version of base_color as main background color
   // false ->base_color as main background color
