--- a/webPackage/css/SASS/colors/_colors-defaultSettings.sass
+++ b/webPackage/css/SASS/colors/_colors-defaultSettings.sass
@@ -1,4 +1,5 @@
 $base_color: $LIGHT_GRAY !default
+$base_color_bg: true
 $lightBackground: true !default
 $shadeCoeficient: 1 !default
 $color3Hue: -60deg !default
